--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "csgo-fade-percentage-calculator": "^2.0.0",
     "globaloffensive": "^3.2.0",
     "long": "^5.3.2",
     "protobufjs": "^7.5.4",
