feat: Add inspect API with multi-bot support, Redis caching, and batch processing.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,20 @@
-STEAM_USERNAME=your_username
-STEAM_PASSWORD=your_password
-STEAM_SHARED_SECRET=your_shared_secret_optional
+# Steam bots (unlimited, format: username:password:secret|username:password:secret|...)
+# Examples:
+# With shared secrets (2FA): STEAM_BOTS=bot1:pass1:secret1|bot2:pass2:secret2
+# Without 2FA: STEAM_BOTS=bot1:pass1:|bot2:pass2:
+# Mixed: STEAM_BOTS=bot1:pass1:secret1|bot2:pass2:|bot3:pass3:secret3
+STEAM_BOTS=your_username:your_password:your_shared_secret_optional
+
+# Redis configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# Performance tuning
+INSPECT_CACHE_TTL=86400
+INSPECT_MAX_BATCH_SIZE=1000
+INSPECT_QUEUE_RATE_LIMIT=1000
+
+# Server
 PORT=3002
