--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "csgo-fade-percentage-calculator": "^2.0.0",
     "globaloffensive": "^3.2.0",
+    "ioredis": "^5.8.2",
     "long": "^5.3.2",
     "protobufjs": "^7.5.4",
     "reflect-metadata": "^0.2.2",
@@ -40,6 +43,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
